[package]
name = "vectum_lib"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "Aids SteamDepotDownloaderGUI into contacting the Steam API"
homepage = "https://depotdownloader.00pium.net"
repository = "https://github.com/mmvanheusden/vectum_lib"
readme = "README.md"
categories = ["api-bindings"]
exclude = ["example/"]


[dependencies]
derive-getters = "0.5.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { features = ["macros"],version = "1.41.0" }
